# aiogram-base-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 41d1b7cc57c4_.py  6b83108bd59c_.py
src/: main.py
src/core/: commands.py  config.py  filters.py  keyboards.py  logging_setup.py  middleware.py  setup.py
src/core/infrastructure/: redis_client.py
src/database/: repository.py  unit_of_work.py  utils.py
src/users/: handlers.py  router.py  states.py
src/users/database/: models.py  repository.py  schemas.py  uow.py
src/users/dialogs/: __init__.py  dialogs.py  getters.py  handlers.py
